--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about" class="section">
         <div class="container about-container">
-            <img src="C:\Users\Тест\Downloads\vs5.jpg" alt="Your Image" class="profile-img circle">
+            <img src="vs999.jfif" alt="Your Image" class="profile-img circle">
             <div class="text-content">
                 <h2>Автобиография</h2>
                 <p>Салем, менің атым <strong>Жомарт</strong>. Мен 2008 жылы 5 маусымда Алматы қаласында дүниеге келдім. 2015 жылы алғаш рет мектепте оқи бастадым және қазір РФММ-нің 10-сынып оқушысымын. Бала кезімнен-ақ математика және логика пәндеріне көп қызыққанмын. </p>
